--- a/{{cookiecutter.profile_name}}/config.yaml
+++ b/{{cookiecutter.profile_name}}/config.yaml
@@ -1,6 +1,7 @@
-cluster: "moab-submit.py --depend \"{dependencies}\""
-cluster-status: "moab-status.py"
-jobscript: "moab-jobscript.sh"
+cluster: "pbs-submit.py --depend \"{dependencies}\""
+cluster-status: "pbs-status.py"
+
+jobscript: "pbs-jobscript.sh"
 jobs: 5000
 max-jobs-per-second: 1
 max-status-checks-per-second: 10
