Add default_account parameter

--- a/{{cookiecutter.profile_name}}/config.yaml
+++ b/{{cookiecutter.profile_name}}/config.yaml
@@ -1,11 +1,11 @@
-cluster: "pbs-submit.py --depend \"{dependencies}\""
+cluster: "pbs-submit.py --depend \"{dependencies}\" -A '{{cookiecutter.default_account}}'"
 cluster-status: "pbs-status.py"
-
 jobscript: "pbs-jobscript.sh"
+
 jobs: 5000
 max-jobs-per-second: 1
 max-status-checks-per-second: 10
 restart-times: 5
-immediate-submit: {{cookiecutter.immediate_submit}}
+immediate-submit: {{ cookiecutter.immediate_submit }}
 verbose: true
 notemp: true
